src/assets/css/style.css
/* ... */
/* Brand Logo styling within the banner */
.banner-main .brand-logo {
  position: absolute; /* Position the brand logo absolutely */
  top: 820px; /* Adjust the value as needed to place it below the shortTitle */
  left: 50%;
  transform: translateX(-50%); /* Center horizontally */
  display: flex;
  justify-content: space-between;
  width: 100%;
  max-width: 600px; /* Adjust based on your design needs */
}

.banner-main .brand-logo .image1 {
  width: 100px !important;
}

.banner-main .brand-logo .image2 {
  width: 170px;
}

/* Responsive styling for smaller screens */
@media (max-width: 767px) {
  .banner-main .title {
    top: 700px !important; /* Adjust this value for smaller screens */
    font-size: 22px; /* Adjust font size for smaller screens */
    line-height: 30px; /* Adjust line height for smaller screens */
    width: 100% !important; /* Ensure text wraps */
    white-space: normal; /* Allow text to wrap */
  }
  .banner-main .jb-logo {
    top: -65px;
    left: -30px;
    width: 350px; /* Size for smaller screens */
  }
  .banner-main .shortTitle {
    top: 650px !important; /* Adjust for smaller screens */
    font-size: 16px !important; /* Adjust font size for smaller screens */
    margin-bottom: 10px; /* Adjust this value to increase/decrease white space */
  }
  .banner-main .brand-logo {
    top: 775px !important; /* Adjust for small screens */
    max-width: 1000px !important; /* Adjust based on your design needs */
  }
  .brand-logo .image1 {
    width: 120px; /* Adjust for smaller screens */
  }
  .brand-logo .image2 {
    width: 120px; /* Adjust for smaller screens */
  }
}

/* Responsive styling for medium screens */
@media (min-width: 768px) and (max-width: 991px) {
  .banner-main .jb-logo {
    top: -65px;
    left: -30px;
    width: 350px; /* Size for medium screens */
  }
  .banner-main .title {
    top: 700px; /* Adjust for medium screens */
    white-space: normal; /* Keep text on two lines */
    width: 90% !important; /* Ensure text wraps */
  }
  .banner-main .shortTitle {
    top: 650px !important; /* Adjust for medium screens */
    font-size: 16px !important; /* Adjust font size for medium screens */
    margin-bottom: 10px; /* Adjust this value to increase/decrease white space */
  }
  .banner-main .brand-logo {
    top: 725px; /* Adjust for medium screens */
    min-width: 1400px !important; /* Adjust based on your design needs */
  }
  .brand-logo .image1 {
    width: 150px; /* Adjust for medium screens */
  }
  .brand-logo .image2 {
    width: 150px; /* Adjust for medium screens */
  }
}

/* Responsive styling for large screens */
@media (min-width: 992px) and (max-width: 1199px) {
  .banner-main .jb-logo {
    top: -65px;
    left: -30px;
    width: 350px; /* Size for larger screens */
  }
  .banner-main .title {
    top: 700px; /* Adjust for larger screens */
    white-space: nowrap; /* Keep text on one line */
  }
  .banner-main .shortTitle {
    top: 650px !important; /* Adjust for large screens */
    font-size: 16px !important; /* Adjust font size for large screens */
    margin-bottom: 10px; /* Adjust this value to increase/decrease white space */
  }
  .banner-main .brand-logo {
    top: 715px; /* Adjust for larger screens */
    min-width: 1700px !important; /* Adjust based on your design needs */
  }
  .brand-logo .image1 {
    width: 170px; /* Adjust for larger screens */
  }
  .brand-logo .image2 {
    width: 170px; /* Adjust for larger screens */
  }
}

/* Responsive styling for extra large screens */
@media (min-width: 1200px) and (max-width: 1399px) {
  .banner-main .jb-logo {
    top: -65px;
    left: -30px;
    width: 350px; /* Size for larger screens */
  }
  .banner-main .title {
    top: 700px; /* Adjust for larger screens */
    white-space: nowrap; /* Keep text on one line */
  }
  .banner-main .shortTitle {
    top: 650px !important; /* Adjust for larger screens */
    font-size: 16px !important; /* Adjust font size for larger screens */
    margin-bottom: 10px; /* Adjust this value to increase/decrease white space */
  }
  .banner-main .brand-logo {
    top: 725px; /* Adjust for larger screens */
    min-width: 2000px !important; /* Adjust based on your design needs */
  }
  .brand-logo .image1 {
    width: 190px; /* Adjust for larger screens */
  }
  .brand-logo .image2 {
    width: 190px; /* Adjust for larger screens */
  }
}

/* Responsive styling for very large screens */
@media (min-width: 1400px) {
  .banner-main .jb-logo {
    top: -65px;
    left: -30px;
    width: 350px; /* Size for very large screens */
  }
  .banner-main .title {
    top: 700px; /* Adjust for very large screens */
    white-space: nowrap; /* Keep text on one line */
  }
  .banner-main .shortTitle {
    top: 650px !important; /* Adjust for very large screens */
    font-size: 16px !important; /* Adjust font size for very large screens */
    margin-bottom: 10px; /* Adjust this value to increase/decrease white space */
  }
  .banner-main .brand-logo {
    top: 725px; /* Adjust for very large screens */
    min-width: 1800px !important; /* Adjust based on your design needs */
  }
  .brand-logo .image1 {
    width: 210px; /* Adjust for very large screens */
  }
  .brand-logo .image2 {
    width: 210px; /* Adjust for very large screens */
  }
}

/* Video container styles for positioning and overflow handling */
.video-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
  z-index: -1;
}

/* BG Video styling within the banner */
.banner-main .bg-video {
  filter: opacity(1.6);
  object-fit: cover; /* Ensure the video covers the entire area */
  width: 100%; /* Ensure the video takes full width */
  height: 100%; /* Ensure the video takes full height */
  position: absolute; /* Ensure the video stays at the top */
  top: 0;
  left: 0;
}
/* General BG Video styling */
.bg-video {
  transform: scale(1.4);
  z-index: -1;
  filter: opacity(0.8);
}
/* ... */

